# caretaker-child-utterances

./: .gitignore  Procfile  README.md  childes.joblib  main.py  makefile  package-lock.json  package.json  pyproject.toml  requirements.txt  vectorizer.joblib  webpack.config.js  wsgi.py
src/: index.scss  index.ts
static/: index.css  index.js
templates/: index.html
