[project]
name = "childes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "joblib>=1.5.1",
    "nltk>=3.9.1",
    "pandas>=2.3.0",
    "pylangacq>=0.19.1",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = [
        "types-openpyxl>=3.1.5.20250602",
        "types-python-dateutil>=2.9.0.20250708",
        "scipy-stubs>=1.16.0.2",
        "pandas-stubs>=2.3.0.250703",
        "ruff>=0.12.2",
        "microsoft-python-type-stubs",
        "mypy>=1.16.1",
        "djlint>=1.36.4",
        "jsbeautifier>=1.15.4",
        "cssbeautifier>=1.15.4",
]

[tool.uv.sources]
microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }

[tool.ruff.lint]
extend-select = ["I"]

[tool.djlint]
profile="jinja"
